examples/errors/parsing/ptr_eq-lowercase-ptr.cn
fun isAlias : (ptr Int * ptr Int) -> Bool [pure] = {
  (a, b) -> Eq[ptr Int] (a, b)
}

main : () [impure] = ()
